--- a/estilo.css
+++ b/estilo.css
@@ -115,6 +115,7 @@ span {
     text-decoration: none;
     color: #fff;
     padding: 0.75rem 1.5rem;
+    font-size: 1.2rem;
     border-radius: 5px;
     transition: var(--transicao);
 }
@@ -163,6 +164,14 @@ span {
     margin-bottom: 1rem;
 }
 
+/*@media(max-width: 1200px){
+    .dev {
+        grid-template-columns: repeat(1, 1fr);
+        display: flex;
+        flex-direction: column;
+    }
+}
+*/
 @media(max-width: 768px) {
     .dev {
         grid-template-columns: repeat(1, 1fr);
