--- a/estilo.css
+++ b/estilo.css
@@ -124,20 +124,20 @@ span {
     background-color: var(--cor-secundaria);
 }
 
-.dev-imagem img {
-    position: relative;
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    border: 4px solid var(--cor-primaria);
+
+.dev-imagem {
+    
+border-color: RED;
 }
 
 .imagem-perfil {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    position: relative;
+    width: 350px;
+    height: 350px;
     border-radius: 50%;
+    border: 4px solid var(--cor-primaria);
+    object-fit: cover;
 }
 
 .skills-grid {
